# mofh

./: .deepsource.toml  .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: publish-to-pypi.yml  tests.yml
docs/: api.rst  conf.py  index.rst  installation.rst  modules.rst  mofh.rst  requirements.txt
mofh/: errors.py  main.py
src/mofh/: __init__.py  errors.py  main.py
tests/: conftest.py  test_async.py  test_sync.py
