[metadata]
name = mofh
description = API wrapper for https://myownfreehost.net
version = 1.0.2
author = Robert S.
author_email = admin@robert-s.dev
url = https://github.com/Wallvon/mofh
license = GPLv3
license_files = LICENSE.MD
platforms = unix, linux, osx, cygwin, win32, win64
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    mofh
    myownfreehost
    vistapanel
    vpanel
    byet
    ifastnet
    byethost
    freehosting
    free-hosting
    api-wrapper
    api
    wrapper
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
packages =
    mofh
install_requires =
    aiohttp[speedups]>=3.8.1
    asyncio>=3.4.3
    uvloop>=0.16.0
    requests>=2.28.1
    defusedxml>=0.7.1
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    flake8==5.0.4
    tox==3.25.1
    pytest==7.1.2
    pytest-cov==3.0.0
    pytest-asyncio==0.19.0
    mypy==1.0.1
    sphinx==5.1.1

[options.package_data]
mofh = py.typed

[flake8]
max-line-length = 88
exclude = .git,__pycache__,node_modules,venv,build,dist,setup.cfg,src/mofh/__init__.py
